--- a/src/main/resources/APachas/src/styles.css
+++ b/src/main/resources/APachas/src/styles.css
@@ -1,3 +1,5 @@
+@import "../node_modules/angular-calendar/css/angular-calendar.css";
+
 .ng-dropdown-panel-items.scroll-host::-webkit-scrollbar{
      -webkit-appearance: none;
 }
@@ -43,6 +45,7 @@
 
 .ng-dropdown-panel .ng-dropdown-panel-items .ng-optgroup {
      text-align: center !important;
+     background-color: #f5f5f5 !important;
 }
 
 .ng-dropdown-panel .ng-dropdown-panel-items .ng-optgroup.ng-option-marked {
@@ -111,5 +114,107 @@
 }
 .daterangepicker option:before {
      background-color: rgba(102, 187, 106, 0.1) !important;
+}
 
+.daterangepicker select {
+     text-decoration: none !important;
+     border: 1px solid #cccccc !important;
+     box-shadow: none !important;
+     font-size: 14px !important;
+     letter-spacing: 1px !important;
+     font-weight: 300 !important;
+     color: #333 !important;
+     outline: none !important;
+     background-color: white !important;
+}
+
+.daterangepicker select option{
+     text-decoration: none !important;
+     border: 1px solid #cccccc !important;
+     box-shadow: none !important;
+     font-size: 14px !important;
+     letter-spacing: 1px !important;
+     font-weight: 300 !important;
+     color: #333 !important;
+     outline: none !important;
+     background-color: white !important;
+}
+
+.daterangepicker select option:hover
+
+{
+     background-color: rgba(102, 187, 106, 0.1) !important;
+
+}
+
+.daterangepicker td:hover{
+     background-color: rgba(102, 187, 106, 0.1) !important;
+}
+
+.cal-month-view .cal-header .cal-cell {
+     text-transform: uppercase;
+     color: #555;
+}
+
+.cal-month-view .cal-day-number {
+     text-decoration: none;
+     border: 1px solid #ffffff;
+     box-shadow: none;
+     font-size: 18px;
+     letter-spacing: 1px;
+     font-weight: 300;
+     color: #333;
+     outline: none;
+}
+
+.cal-month-view .cal-day-badge{
+     background-color: #66bb6a !important;
+}
+
+.cal-month-view .cal-open-day-events{
+     background-color: #f5f5f5 !important;
+     box-shadow: none !important;
+}
+
+.cal-month-view .cal-open-day-events{
+     text-decoration: none;
+     border: 1px solid #ffffff;
+     box-shadow: none;
+     font-size: 14px;
+     letter-spacing: 1px;
+     text-align: left;
+     text-transform: uppercase;
+     font-weight: 300;
+     color: #333 !important;
+     outline: none;
+}
+
+.cal-month-view .cal-day-cell.cal-today{
+     background-color: rgba(102, 187, 106, 0.1) !important;
+}
+
+.cal-month-view .cal-cell-row .cal-cell:hover, .cal-month-view .cal-cell.cal-has-events.cal-open{
+     background-color: rgba(102, 187, 106, 0.1) !important;
+}
+
+.btn:focus{
+     box-shadow: none;
+}
+
+.btn-close:focus{
+     box-shadow: none;
+}
+
+.form-check-input:checked{
+     background-color: #66bb6a;
+     border-color: #66bb6a;
+}
+
+.form-check-input:focus{
+     box-shadow: none !important;
+     border-color: #cccccc;
+}
+
+.table-hover > tbody > tr:hover {
+     --bs-table-accent-bg: rgba(102, 187, 106, 0.1);
 }
