--- a/src/main/resources/APachas/src/app/components/transactions/listTransactions.component.css
+++ b/src/main/resources/APachas/src/app/components/transactions/listTransactions.component.css
@@ -34,6 +34,13 @@
     padding-right: 20px;
 }
 
+.arrow{
+    height: 30px;
+    width: 80px;
+    margin-left: -10px;
+    margin-right: -10px;
+}
+
 .messageCost
 {
     text-transform: uppercase;
@@ -41,7 +48,7 @@
     cursor: default;
     text-decoration: none;
     text-align: center;
-    color: #66bb6a;
+    color: #333333;
     border: none;
     outline: none;
     box-shadow: none;
@@ -49,8 +56,12 @@
     font-weight: 600;
 }
 
-.colorDebt{
+.colorDebtSender{
     color: #d92e2e;
+}
+
+.colorDebtReceiver{
+    color: #66bb6a;
 }
 
 .colorButtonDebt{
@@ -144,7 +155,6 @@ input[type="search"]::-webkit-search-cancel-button{
 }
 
 .transactionButton {
-    width: 100%;
     padding: 10px;
     border: none;
     outline: none;
@@ -329,6 +339,7 @@ ul li:last-child a
 
 .searchTransaction{
     margin-left: -40px;
+    margin-bottom: 20px;
 }
 
 .text{
@@ -436,8 +447,8 @@ div.paginationPartakerDiv {
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 2px;
-    text-align: left;
-    width: 55%;
+    text-align: center;
+    width: 100%;
     color: #555;
 }
 
@@ -603,15 +614,13 @@ ul.pagination li:last-child a
 
 /*L*/
 @media (min-width: 993px) and (max-width: 1200px) {
-    .card-text{
-        padding-right: 30px;
-    }
-    .searchDiv input {
-        width: 55%;
-    }
-    .searchDiv{
-        text-align: right;
-    }
+   .transactionTitle{
+       margin-right: -5%;
+   }
+.searchTransaction{
+    margin-left: 25%;
+}
+
 }
 
 /*M*/
@@ -619,15 +628,8 @@ ul.pagination li:last-child a
     .title{
         padding-top: 20px;
     }
-    .card-text{
-        text-align: center;
-        padding-left: 0px;
-    }
-    .searchDiv input {
-        width: 70%;
-    }
-    .searchDiv{
-        text-align: center;
+    .searchTransaction{
+        margin-left: 20%;
     }
 
 }
@@ -637,11 +639,8 @@ ul.pagination li:last-child a
     .card-text{
         padding-right: 45px;
     }
-    .searchDiv input {
-        width: 100%;
-    }
-    .searchDiv{
-        text-align: right;
+    .searchTransaction{
+        margin-left: 15%;
     }
     .createDiv{
         text-align: center!important;
@@ -653,18 +652,40 @@ ul.pagination li:last-child a
     .title{
         padding-top: 20px;
     }
+    .searchTransaction{
+        margin-left: 15%;
+    }
     .card-text{
         text-align: center;
         padding-left: 0px;
     }
-    .searchDiv input {
-        width: 80%;
-    }
-    .searchDiv{
-        text-align: right;
-    }
+
     .createDiv{
         padding-top: 10px;
         text-align: center!important;
     }
+}
+
+@media (min-width: 280px) and (max-width: 497px){
+    .imageTransaction{
+        width: 100px;
+        height: 100px;
+    }
+
+    .messageCost{
+        font-size: 10px;
+    }
+
+    .colorButtonDebt{
+        font-size: 10px;
+        padding: 5px;
+    }
+
+    .transactionTitle{
+        font-size: 10px;
+    }
+
+
+
+
 }
