--- a/src/main/resources/APachas/src/app/components/users/detailUser/detailUser.component.html
+++ b/src/main/resources/APachas/src/app/components/users/detailUser/detailUser.component.html
@@ -4,6 +4,7 @@
     <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
             <div class="modal-header">
+
                 <h5 class="modal-title title">
                     {{user.userLogin}}
                 </h5>
@@ -18,12 +19,13 @@
                         </li>
                     </ul>
                 </div>
+
                 <button type="button" id="closeButton" class="btn-close closeButton"  data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <div class="col container-fluid">
                     <div class="row">
-                        <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+                        <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12 userScroll">
                             <div class="imageUserDiv">
                                 <ng-container *ngIf="user.userPhoto; else imagesDiv">
                                     <img class="imageUser" [src]="user.userPhoto" alt=""
@@ -33,17 +35,17 @@
                                     <img class="imageUser" [src]="defaultImage">
                                 </ng-template>
                             </div>
-                            <p class="text subtitle">AMIGOS COMUNES</p>
-                            <div class="paginationMutualDiv col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
+                            <p class="text subtitle userSubtitle">AMIGOS COMUNES</p>
+                            <div class="paginationMutualDiv col-xxl-5 col-xl-5 col-lg-5 col-md-12 col-sm-12 col-5">
                                 <div class="row">
-                                    <ng-container  *ngIf="mutualFriends.length !=0; else mutualFriendsDiv">
-                                        <div *ngFor="let user of mutualFriends" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
+                                    <ng-container *ngIf="mutualFriends.length !=0; else mutualFriendsDiv">
+                                        <div *ngFor="let user of mutualFriends" class="col-xxl-5 col-xl-5 col-lg-5 col-md-12 col-sm-12 col-5 userDiv">
                                             <ng-container *ngIf="user.userPhoto; else userImagesDiv">
                                                 <p class="imageP">
                                                     <img class="imageMutuals"
                                                          [src]="user.userPhoto" alt="" id="detailMutualUser_photo">
                                                 </p>
-                                                <p class="mutual">
+                                                <p class="mutual mutualUser">
                                                     {{user.userLogin}}
                                                 </p>
                                             </ng-container>
@@ -51,30 +53,30 @@
                                                 <p class="imageP">
                                                     <img class="imageMutuals" [src]="defaultImage">
                                                 </p>
-                                                <p class="mutual">
+                                                <p class="mutual mutualUser">
                                                     {{user.userLogin}}
                                                 </p>
                                             </ng-template>
                                         </div>
-                                        <div *ngIf="pageMutualFriends > sizeMutualFriends" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 more" (click)="getLessMutualFriends();"><a>
+                                        <div *ngIf="mutualFriends.length > sizeMutualFriends" [ngClass]="previousFriendClass" class="more" (click)="getLessMutualFriends();"><a>
                                             Ver menos</a></div>
-                                        <div *ngIf="mutualFriends.length < totalMutualFriends" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 more" (click)="getMoreMutualFriends();"><a>
+                                        <div *ngIf="mutualFriends.length < totalMutualFriends" [ngClass]="nextFriendClass" class="more" (click)="getMoreMutualFriends();"><a>
                                             Ver más</a></div>
                                     </ng-container>
                                     <ng-template #mutualFriendsDiv>
                                         <div class="col-xxl-12 col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                                            <p class="text">No existen amigos comunes</p>
+                                            <p class="text userText">No hay amigos en común</p>
                                         </div>
                                     </ng-template>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12 mutualBorder">
+                        <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-6 col-sm-6 col-11 mutualBorder">
                                 <p class="text subtitle">GRUPOS COMUNES</p>
-                                <div class="paginationMutualDiv mutualRight col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
+                                <div class="paginationMutualDiv mutualRight col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-5">
                                     <div class="row">
                                         <ng-container  *ngIf="mutualGroups.length !=0; else mutualGroupsDiv">
-                                            <div *ngFor="let group of mutualGroups" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
+                                            <div *ngFor="let group of mutualGroups" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-5 mutualDiv">
                                                 <ng-container *ngIf="group.groupPhoto; else groupImagesDiv">
                                                     <p class="imageP">
                                                         <img class="imageMutuals"
@@ -93,23 +95,23 @@
                                                     </p>
                                                 </ng-template>
                                             </div>
-                                            <div *ngIf="mutualGroups.length > sizeMutualGroups" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 more" (click)="getLessMutualGroups()"><a>
+                                            <div *ngIf="mutualGroups.length > sizeMutualGroups" [ngClass]="previousGroupClass" class="moreMutual" (click)="getLessMutualGroups()"><a>
                                                 Ver menos</a></div>
-                                            <div *ngIf="mutualGroups.length < totalMutualGroups" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 more" (click)="getMoreMutualGroups()"><a>
+                                            <div *ngIf="mutualGroups.length < totalMutualGroups" [ngClass]="nextGroupClass" class="moreMutual" (click)="getMoreMutualGroups()"><a>
                                                 Ver más</a></div>
                                         </ng-container>
                                         <ng-template #mutualGroupsDiv>
                                             <div class="col-xxl-12 col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                                                <p class="text">No existen grupos comunes</p>
+                                                <p class="text withoutText">No hay grupos en común</p>
                                             </div>
                                         </ng-template>
                                     </div>
                                 </div>
                             <p class="text subtitle">EVENTOS COMUNES</p>
-                            <div class="paginationMutualDiv mutualRight col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
+                            <div class="paginationMutualDiv mutualRight col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-5">
                                 <div class="row">
                                     <ng-container  *ngIf="mutualEvents.length !=0; else mutualEventsDiv">
-                                        <div *ngFor="let event of mutualEvents" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
+                                        <div *ngFor="let event of mutualEvents" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-5 mutualDiv">
                                             <ng-container *ngIf="event.eventPhoto; else eventImagesDiv">
                                                 <p class="imageP">
                                                     <img class="imageMutuals"
@@ -128,14 +130,14 @@
                                                 </p>
                                             </ng-template>
                                         </div>
-                                        <div *ngIf="pageMutualEvents > sizeMutualEvents" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 more" (click)="getLessMutualEvents();"><a>
+                                        <div *ngIf="mutualEvents.length > sizeMutualEvents" [ngClass]="previousEventClass" class="moreMutual" (click)="getLessMutualEvents();"><a>
                                             Ver menos</a></div>
-                                        <div *ngIf="mutualEvents.length < totalMutualEvents" class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 more" (click)="getMoreMutualEvents();"><a>
+                                        <div *ngIf="mutualEvents.length < totalMutualEvents" [ngClass]="nextEventClass"class="moreMutual" (click)="getMoreMutualEvents();"><a>
                                             Ver más</a></div>
                                     </ng-container>
                                     <ng-template #mutualEventsDiv>
                                         <div class="col-xxl-12 col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                                            <p class="text">No existen eventos comunes</p>
+                                            <p class="text withoutText">No hay eventos en común</p>
                                         </div>
                                     </ng-template>
                                 </div>
