--- a/src/main/resources/APachas/src/app/components/events/createEvent/createEvent.component.css
+++ b/src/main/resources/APachas/src/app/components/events/createEvent/createEvent.component.css
@@ -16,14 +16,14 @@
     color: #555;
 }
 
-.file-input{
-    padding-top: 20px;
+/*.file-input{
+    padding-top: 40px;
     padding-bottom: 40px;
-}
+}*/
 
-.file-input label{
+/*.file-input label{
     align-self: center;
-}
+}*/
 
 .file {
     opacity: 0;
@@ -92,6 +92,7 @@ padding-top: 10px;
 .inputs{
     width: 100%;
     padding: 10px;
+    margin-top: -25px;
     background: #f5f5f5;
     color: #333;
     border: none;
@@ -158,6 +159,10 @@ padding-top: 10px;
     border-radius:90px;
 }
 
+.groupColor{
+    background-color: #555555;
+}
+
 .selectedText{
     position: relative;
     display: inline-block;
@@ -203,7 +208,6 @@ padding-top: 10px;
 .close{
     background: #555;
 }
-
 
 @media (max-width: 340px) {
     .buttons{
