--- a/src/main/resources/APachas/src/app/components/events/createEvent/createEvent.component.html
+++ b/src/main/resources/APachas/src/app/components/events/createEvent/createEvent.component.html
@@ -11,7 +11,6 @@
                      <div class="col container-fluid">
                         <div class="row">
                             <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-6 col-sm-6 file-input imageDiv">
-                                <div class="row">
                                     <input (change)="getImage($event)" accept="image/png,image/jpeg" class="file"
                                                type="file"
                                                id="createEvent_eventPhoto" name="eventPhoto">
@@ -31,7 +30,6 @@
                                         <div *ngIf="imageFormat == false">Sólo JPG o PNG
                                         </div>
                                     </div>
-                                </div>
                             </div>
                             <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-6 col-sm-6">
                                 <div class="row name-row">
@@ -164,7 +162,7 @@
                                                         class="selectedText listSelect">{{getPartakersByGroupId(item.groupId).groupName}}</p></span>
                                     </ng-container>
                                     <ng-template #groupPhotoDiv>
-                                        <span class="ng-value-label groupColor" title="{{getPartakersByGroupId(item.groupId).groupName}}"><img
+                                        <span class="ng-value-label" title="{{getPartakersByGroupId(item.groupId).groupName}}"><img
                                                         [src]="defaultGroupImage" class="imageSelect" *ngIf="item.groupId !=0"><p
                                                         class="selectedText listSelect">{{getPartakersByGroupId(item.groupId).groupName}} </p></span>
                                         <span (click)="unselectGroup(item.groupId)">
