--- a/src/main/resources/APachas/src/app/components/events/listEvents/listEvents.component.html
+++ b/src/main/resources/APachas/src/app/components/events/listEvents/listEvents.component.html
@@ -1,6 +1,6 @@
 <section>
     <div class="searchDiv row">
-        <div class="col-xxl-7 col-xl-7 col-lg-7 col-md-8 col-sm-8 col-8">
+        <div class="col-xxl-7 col-xl-7 col-lg-7 col-md-8 col-sm-9 col-10">
             <form ngNativeValidate (input)="searchInput()" #searchEventsForm="ngForm">
                 <input type="search" id="events_eventName" name="eventName" placeholder="Buscar por nombre de evento"
                            [(ngModel)]="eventName" required #eventNameForm="ngModel" aria-label="Search">
@@ -18,7 +18,7 @@
                 </ul>
             </div>
         </div>
-        <div class="col-xxl-1 col-xl-1 col-lg-1 col-md-1 col-sm-1 col-1">
+        <div class="col-xxl-1 col-xl-1 col-lg-2 col-md-2 col-sm-2 col-5 createFirstDiv">
             <button type="button" class="button" data-bs-toggle="modal" data-bs-target="#createEventModal" (click)="setEvent();">Añadir</button>
         </div>
     </div>
