--- a/src/main/resources/APachas/src/app/components/products/listProducts/listProducts.component.css
+++ b/src/main/resources/APachas/src/app/components/products/listProducts/listProducts.component.css
@@ -6,6 +6,17 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+.money{
+    width:173px;
+    height:173px;
+    border-radius:90px;
+    box-shadow: 0 10px 50px rgba(0,0,0,0.5);
+    background-color: rgba(102, 187, 106, 0.1);
+    border: solid;
+    border-color: #66bb6a;
+    border-width: 1px;
+    align-items: center;
+}
 
 .searchDiv
 {
@@ -133,18 +144,25 @@ input[type="search"]::-webkit-search-cancel-button{
     text-align: left !important;
 }
 
-.button{
-    cursor:pointer;
+.button
+{
+    padding: 10px;
     border: none;
-    width: 20px;
-    height: 20px;
-    background: url("../../../../assets/add.svg") top left no-repeat;
-    background-position: center;
-    background-size: 20px 20px;
+    outline: none;
+    box-shadow: none;
+    max-width: 100px;
+    background: #66bb6a;
+    color: #fff;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    transition: 0.5s;
+    text-transform: uppercase;
+    margin-left: 10px;
 }
 
 .transactionButton {
-    width: 100%;
     padding: 10px;
     border: none;
     outline: none;
@@ -163,7 +181,6 @@ input[type="search"]::-webkit-search-cancel-button{
 
 .addButton
 {
-    width: 100%;
     padding: 10px;
     border: none;
     outline: none;
@@ -298,6 +315,7 @@ ul li:last-child a
     text-align: center;
     padding-top: 60px;
     padding-bottom: 10px;
+    margin-left: 20%;
 }
 
 .imageEvent {
@@ -308,15 +326,7 @@ ul li:last-child a
 }
 
 .description-row{
-    padding-top: 10px;
     text-align: left !important;
-}
-
-.description{
-    padding-left: 20px;
-    text-align: left !important;
-    margin-top: -40px;
-    padding-bottom: 60px;
 }
 
 .section{
@@ -414,6 +424,32 @@ div.paginationPartakerDiv {
     margin-left: -15px;
 }
 
+.partakerExpense{
+    padding-top: 30%;
+    text-align: center;
+    font-size: 30px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-weight: 600;
+    color: #66bb6a;
+}
+
+.moneyButton{
+    margin-left: 30%;
+    margin-top: 30px;
+}
+
+.partakerTextExpense{
+    text-align: center;
+    font-size: 12px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-weight: 300;
+    color: #333;
+    width:80%;
+    margin-left: 10%;
+}
+
 .owner{
     border-style: solid;
     border-color: rgba(102, 187, 106, 0.53);
@@ -423,11 +459,11 @@ div.paginationPartakerDiv {
     width: 35px;
     height: 20px;
     padding-right: 5px;
+    margin-right: 2%;
 }
 
 .date{
     width: 100%;
-    padding-top: 10px;
 }
 
 .subtitle{
@@ -436,8 +472,8 @@ div.paginationPartakerDiv {
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 2px;
-    text-align: left;
-    width: 55%;
+    text-align: center;
+    width: 100%;
     color: #555;
 }
 
@@ -476,11 +512,15 @@ div.paginationPartakerDiv {
     vertical-align: center;
 }
 .more{
-    display:flex;
-    justify-content: center;
-    align-items: end;
-    padding-bottom: 20px;
+    padding-left: 10%;
+}
 
+.nextMember{
+    padding-left: 28%;
+}
+
+.more a:hover{
+    text-decoration: underline;
 }
 
 .deleteButton{
@@ -540,6 +580,10 @@ ul.pagination li:last-child a
     cursor:pointer;
 }
 
+.money{
+ margin-left: 20%;
+}
+
 .previous{
     float: left;
 }
@@ -548,6 +592,9 @@ ul.pagination li:last-child a
     float: right;
 }
 
+.moneyCircles{
+    margin-top: 2%;
+}
 @media (max-width: 349px) {
 
     ul.paginationEvent li {
@@ -588,6 +635,9 @@ ul.pagination li:last-child a
 @media (min-width: 1200px) and (max-width: 1400px) {
     .title{
         padding-top: 20px;
+        text-align: center;
+        margin-left: 22%;
+        margin-right: 20%;
     }
     .card-text{
         text-align: center;
@@ -598,6 +648,15 @@ ul.pagination li:last-child a
     }
     .searchDiv{
         text-align: right;
+    }
+
+
+    .imageEventDiv{
+        margin-left: 30%;
+    }
+
+    .text{
+        margin-left: 15%;
     }
 }
 
@@ -612,16 +671,31 @@ ul.pagination li:last-child a
     .searchDiv{
         text-align: right;
     }
+
+    .nextMember{
+        padding-left: 20%;
+    }
+    .imageEventDiv{
+        margin-left: 20%;
+    }
+
+    .text{
+        margin-left: 15%;
+    }
 }
 
 /*M*/
 @media (min-width: 768px) and (max-width: 992px) {
     .title{
         padding-top: 20px;
+        margin-left: -25%;
     }
     .card-text{
         text-align: center;
         padding-left: 0px;
+    }
+    .more{
+        margin-left: -2%;
     }
     .searchDiv input {
         width: 70%;
@@ -629,6 +703,25 @@ ul.pagination li:last-child a
     .searchDiv{
         text-align: center;
     }
+
+    .partaker{
+        margin-left: -20%;
+    }
+
+    .moneyButton{
+        margin-bottom: 10%;
+    }
+
+    .paginationPartakerDiv {
+        padding-left: 15%;
+        border: none !important;
+    }
+
+    .imageEventDiv{
+        margin-top: -10%;
+        margin-bottom: 5%;
+    }
+
 
 }
 
@@ -646,20 +739,170 @@ ul.pagination li:last-child a
     .createDiv{
         text-align: center!important;
     }
+
+    .moneyCircles{
+        margin-left: 5%;
+    }
+    .paginationPartakerDiv {
+        padding-left: 15%;
+        border: none !important;
+    }
+    .partaker{
+        margin-left: 5%;
+    }
+
+    .moneyCircles{
+        margin-left: -5%;
+    }
+    .moneyButton{
+        margin-bottom: 10%;
+    }
+
+    .imageEventDiv{
+
+        margin-bottom: 5%;
+    }
+
+    .title{
+        margin-left: -35%;
+    }
+}
+@media (min-width: 470px) and (max-width: 576px) {
+
+    .moneyCircles{
+        margin-left: -10%;
+    }
+    .paginationPartakerDiv {
+        padding-left: 10%;
+        border: none !important;
+
+    }
+    .partaker{
+        margin-left: -10%;
+    }
+
+    .partakerDiv{
+        padding-left: 15%;
+    }
+
+    .moneyButton{
+        margin-bottom: 10%;
+    }
+
+    .imageEventDiv{
+        margin-left: 35%;
+        margin-bottom: 5%;
+    }
+
+    .title{
+        padding-left: 30%;
+        margin-top: -5%;
+    }
+
+    .text{
+        margin-left: 32%;
+    }
 }
 
+@media (max-width: 330px){
+    .circle{
+        margin-left: 1%;
+        margin-top: 10%;
+    }
+
+    .text{
+        margin-left: 5%;
+    }
+    .imageEventDiv{
+        margin-left: 10%;
+        margin-bottom: 5%;
+    }
+
+    .moneyButton{
+        margin-top: 20%;
+        margin-left: 50%;
+    }
+    .paginationPartakerDiv {
+        padding-left: 18%;
+        border: none !important;
+
+    }
+
+    .title{
+        font-size: 20px;
+        padding-left: 15%;
+
+    }
+
+    .partaker{
+        margin-left: 5%;
+    }
+
+    .partakerDiv{
+        padding-left: 5%;
+        margin-left: 25%;
+    }
+}
+
+@media (min-width: 330px) and (max-width: 470px) {
+
+    .circle{
+
+        margin-left: 5%;
+        margin-top: 10%;
+    }
+
+    .moneyButton{
+        margin-top: 20%;
+        margin-left: 35%;
+    }
+    .paginationPartakerDiv {
+        padding-left: 10%;
+        border: none !important;
+
+    }
+
+    .partaker{
+        margin-left: -5%;
+    }
+
+    .partakerDiv{
+        padding-left: 5%;
+        margin-left: 25%;
+    }
+
+    .imageEventDiv{
+        margin-left: 15%;
+        margin-bottom: 5%;
+    }
+
+    .title{
+        padding-left: 10%;
+        margin-top: -5%;
+    }
+
+    .text{
+        margin-left: 12%;
+    }
+
+}
 /*XS*/
 @media (max-width: 576px) {
     .title{
         padding-top: 20px;
+        margin-left: 5%;
     }
     .card-text{
         text-align: center;
         padding-left: 0px;
+        margin-left: 5%;
     }
+
     .searchDiv input {
-        width: 80%;
+        margin-top: 4%;
+        width: 75%;
     }
+
     .searchDiv{
         text-align: right;
     }
@@ -667,4 +910,5 @@ ul.pagination li:last-child a
         padding-top: 10px;
         text-align: center!important;
     }
+
 }
