Update and adds auth user info
auth user transaction history
auth user profile
auth user login
auth user register

--- a/src/main/resources/APachas/src/app/components/authUser/register/register.component.html
+++ b/src/main/resources/APachas/src/app/components/authUser/register/register.component.html
@@ -3,11 +3,14 @@
         <div class="user signupBx">
             <div class="formBx">
                 <form (submit)="onCreate()" ngNativeValidate #loginForm="ngForm">
-                    <h2>Crear una cuenta en <a href="/home">¡A pachas!</a></h2>
+                    <h2>Crear una cuenta en <a href="home">¡A pachas!</a></h2>
                     <div>
-                        <input type="text" id="register_userName" name="userName" placeholder="Nombre"
+                        <input type="text" id="register_userName" name="userName" placeholder="Nombre*"
                                pattern="[a-zA-ZñÑ]{1,100}" title="Must be an alpha"
                                [(ngModel)]="name" required #usernameForm="ngModel">
+                        <div *ngIf="!available" class="alert alert-danger">
+                            <div>Login no disponible</div>
+                        </div>
                         <div *ngIf="loginForm.submitted && usernameForm.invalid" class="alert alert-danger">
                             <div *ngIf="usernameForm.errors.required">El nombre es un campo obligatorio</div>
                             <div *ngIf="usernameForm.errors.pattern">El nombre solo puede contener letras y debe estar
@@ -16,7 +19,7 @@
                         </div>
                     </div>
                     <div>
-                        <input type="text" id="register_userSurname" name="userSurname" placeholder="Apellidos"
+                        <input type="text" id="register_userSurname" name="userSurname" placeholder="Apellidos*"
                                [(ngModel)]="surname" pattern="[a-zA-ZñÑ ]{1,100}" title="Must be an alpha" required
                                #userSurnameForm="ngModel" minlength="6">
                         <div *ngIf="loginForm.submitted && userSurnameForm.invalid" class="alert alert-danger">
@@ -27,7 +30,7 @@
                         </div>
                     </div>
                     <div>
-                        <input type="text" id="register_userLogin" name="userLogin" placeholder="Nombre de usuario"
+                        <input type="text" id="register_userLogin" name="userLogin" placeholder="Nombre de usuario*"
                                [(ngModel)]="login" required #userLoginForm="ngModel" minlength="6" maxlength="13"
                                pattern="[a-zA-ZñÑ0-9_-]{1,100}" title="Must be an alphanumeric">
                         <div *ngIf="loginForm.submitted && userLoginForm.invalid" class="alert alert-danger">
@@ -39,7 +42,7 @@
                         </div>
                     </div>
                     <div>
-                        <input type="password" id="register_userPassword" name="userPassword" placeholder="Contraseña"
+                        <input type="password" id="register_userPassword" name="userPassword" placeholder="Contraseña*"
                                [(ngModel)]="password" required #userPasswordForm="ngModel" minlength="6">
                         <div *ngIf="loginForm.submitted && userPasswordForm.invalid" class="alert alert-danger">
                             <div *ngIf="userPasswordForm.errors.required">La contraseña es un campo obligatorio</div>
@@ -50,7 +53,7 @@
                     </div>
                     <div>
                         <input type="password" id="register_userPasswordConfirm" name="userPasswordConfirm"
-                               placeholder="Confirmación de contraseña" [(ngModel)]="passwordConfirm" required
+                               placeholder="Confirmación contraseña*" [(ngModel)]="passwordConfirm" required
                                #userPasswordConfirmForm="ngModel" minlength="6">
                         <div *ngIf="password != passwordConfirm" class="alert alert-danger">
                             <div>La contraseña de confirmación no coincide</div>
@@ -64,7 +67,7 @@
                         </div>
                     </div>
                     <div>
-                        <input type="email" id="register_userEmail" name="userEmail" placeholder="Correo electrónico"
+                        <input type="email" id="register_userEmail" name="userEmail" placeholder="Correo electrónico*"
                                [(ngModel)]="email" required #userEmailForm="ngModel" minlength="6">
                         <div *ngIf="loginForm.submitted && userEmailForm.invalid" class="alert alert-danger">
                             <div *ngIf="userEmailForm.errors.required">El correo electrónico es un campo obligatorio
