--- a/src/main/resources/APachas/src/app/components/authUser/login/login/login.component.html
+++ b/src/main/resources/APachas/src/app/components/authUser/login/login/login.component.html
@@ -1,10 +1,10 @@
 <section>
     <div class="container">
         <div class="user signinBx">
-            <div class="imgBx"><img src="../../../../assets/LoginMoney.jpg"></div>
+            <div class="imgBx"><img src="../../../../../assets/LoginMoney.jpg"></div>
             <div class="formBx">
                 <form (submit)="logIn()" ngNativeValidate #loginForm="ngForm">
-                    <h2>Iniciar sesión en <a href="/home"><br>¡A pachas!</a></h2>
+                    <h2>Iniciar sesión en <a href=""><br>¡A pachas!</a></h2>
                     <div>
                         <input type="text" id="login_userLogin" name="userLogin" placeholder="Nombre de usuario"
                                pattern="[a-zA-ZñÑ0-9_-]{1,100}" title="Must be an alphanumeric"
@@ -27,10 +27,14 @@
                         </div>
                     </div>
                     <input type="submit" value="Iniciar sesión">
+                    <p class="signup">¿has olvidado tu contraseña? <a href="" data-bs-toggle="modal" data-bs-target="#retrievePasswordEmailModal"> Recupérala</a></p>
                     <p class="signup">¿no tienes una cuenta? <a href="register"> Regístrate</a></p>
+
                 </form>
             </div>
         </div>
     </div>
 </section>
+<app-retrievePasswordEmail></app-retrievePasswordEmail>
+
 <simple-notifications></simple-notifications>
