--- a/src/main/resources/APachas/src/app/components/authUser/profile/detailProfile/detailProfile.component.css
+++ b/src/main/resources/APachas/src/app/components/authUser/profile/detailProfile/detailProfile.component.css
@@ -1,402 +1,86 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
 *
 {
-    border-collapse: collapse;
-    border-spacing: 10px 5px;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
 
-.searchDiv
-{
+.section{
+    margin-left: -40px;
+    margin-right: -40px;
+    padding-bottom: 80px;
+}
+
+.calendarDiv{
+    margin-top: 50px;
+}
+
+.title{
     padding-top: 50px;
-    padding-bottom: 30px;
-    background: #fff;
-}
-
-.form-check{
-    margin-top: -40px;
-    padding-bottom: 20px;
-}
-
-.message
-{
-    cursor:pointer;
-    text-decoration: none;
-    color: #66bb6a;
-    border: none;
-    outline: none;
-    box-shadow: none;
-    font-size: 12px;
-    letter-spacing: 1px;
-    font-weight: 300;
-    text-transform: uppercase;
-    padding-right: 20px;
-}
-
-.messageCost
-{
+    font-size: 60px;
+    font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 2px;
-    cursor: default;
-    text-decoration: none;
     text-align: center;
-    color: #66bb6a;
-    border: none;
-    outline: none;
-    box-shadow: none;
-    font-size: 24px;
-    font-weight: 600;
-}
-
-.colorDebt{
-    color: #d92e2e;
-}
-
-.colorButtonDebt{
-    background: #d92e2e!important;
-}
-
-.card-text{
-    padding-top: 5px;
-    text-align: right;
-}
-
-.transactionCard-text{
-    text-align: center;
-}
-
-.transactionDivAligment{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-
-.form-check-input:checked{
-    background-color: #66bb6a;
-}
-
-.form-switch .form-check-input:focus {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%2386b7fe'/%3e%3c/svg%3e");
-
-}
-
-.form-switch[_ngcontent-ylm-c80]   .form-check-input[_ngcontent-ylm-c80]:focus {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
-}
-
-.form-check-input:active {
-    filter: none;
-}
-
-.form-check-label{
-    text-decoration: none;
-    border: 1px solid #ffffff;
-    box-shadow: none;
-    font-size: 14px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    text-align: center;
-    font-weight: 300;
-    color: #333;
-    outline: none;
-}
-
-.createDiv{
-    text-align: left !important;
-}
-
-.transactionButton {
     width: 100%;
-    padding: 10px;
-    border: none;
-    outline: none;
-    box-shadow: none;
-    margin: 8px 0;
-    max-width: 180px;
-    background: #66bb6a;
-    color: #fff;
-    cursor: pointer;
-    font-size: 14px;
-    font-weight: 500;
-    letter-spacing: 1px;
-    transition: 0.5s;
-    text-transform: uppercase;
-}
-
-.addButton
-{
-    width: 100%;
-    padding: 10px;
-    border: none;
-    outline: none;
-    box-shadow: none;
-    max-width: 180px;
-    background: #66bb6a;
-    color: #fff;
-    cursor: pointer;
-    font-size: 14px;
-    font-weight: 500;
-    letter-spacing: 1px;
-    transition: 0.5s;
-    text-transform: uppercase;
-}
-
-.divAligment{
-    text-align: center !important;
-}
-
-.col{
-    padding-top: 15px;
-    padding-bottom: 20px;
-}
-
-.card{
-    border: none;
-}
-
-.color:hover{
-    background: rgba(102, 187, 106, 0.12);
-    cursor:pointer;
-}
-
-.image {
-    width:173px;
-    height:173px;
-    border-radius:90px;
-    box-shadow: 0 10px 50px rgba(0,0,0,0.5);
-}
-
-.title{
-    font-size: 20px;
-    font-weight: 600;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    padding-top: 25%;
-}
-
-.transactionTitle{
-    font-size: 20px;
-    font-weight: 600;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-}
-.imageTransaction{
-    width:150px;
-    height:150px;
-    border-radius:90px;
-    background-color: white;
-}
-
-ul li {
-    display: inline;
-}
-
-ul li a {
-    padding: 8px 16px;
-    text-decoration: none;
-    transition: background-color .3s;
-    border: 1px solid #ffffff;
-    box-shadow: none;
-    font-size: 14px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    text-align: center;
-    font-weight: 300;
-    background: #f5f5f5;
-    color: #333;
-    outline: none;
-}
-
-ul li:first-child a
-{
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    cursor:pointer;
-
-}
-
-ul li:last-child a
-{
-
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    cursor:pointer;
-}
-
-.title{
-    padding-top: 60px;
-    font-size: 24px;
-    font-weight: 600;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    text-align: right;
-    width: 55%;
     color: #555;
 }
 
-.eventTitle{
-    font-size: 30px;
-    padding-left: 80px;
+.btn-primary{
+    background-color: #f5f5f5;
+    color: #333333;
+    text-decoration: none;
+    border: 1px solid #ffffff;
+    box-shadow: none;
+    font-size: 14px;
+    letter-spacing: 1px;
+    text-align: left;
+    font-weight: 300;
+    color: #333;
+    padding: 10px;
+    outline: none;
 }
 
-.statusDiv{
-    padding-top: 5px;
-    padding-right: 10px;
-    width: 25%;
-}
-
-.row{
-    align-content: center;
-    padding-bottom: 10px;
-}
-
-.col{
-    text-align: center;
-}
-
-.imageProfileDiv{
-    position: relative;
-    display: inline-block;
-    text-align: center;
-    padding-top: 60px;
-    padding-bottom: 10px;
-}
-
-.imageProfile {
-    width:173px;
-    height:173px;
-    border-radius:90px;
-    background-color: white;
-}
-
-.description-row{
-    padding-top: 10px;
-    text-align: left !important;
-}
-
-.description{
-    padding-left: 20px;
-    text-align: left !important;
-    margin-top: -40px;
-    padding-bottom: 60px;
-}
-
-.section{
-    padding-top: 30px;
-}
-
-.search{
-    margin-left: 20px;
-}
-
-.searchTransaction{
-    margin-left: -40px;
+.icon{
+    width: 25px;
+    height: 20px;
+    padding-right: 5px;
 }
 
 .text{
     text-decoration: none;
     border: 1px solid #ffffff;
     box-shadow: none;
-    font-size: 14px;
+    font-size: 18px;
     letter-spacing: 1px;
-    text-transform: uppercase;
-    text-align: center;
+    text-align: left;
     font-weight: 300;
     color: #333;
+    padding: 10px;
     outline: none;
 }
 
-div.paginationPartakerDiv {
-    padding-top: 10px;
-    height: 290px;
-    overflow: scroll;
-    border-left-style: solid;
-    border-color:  #f5f5f5;
-    margin-left: -30px;
-}
-
-.partakerDiv{
-    padding-left: 40px;
-}
-
-.paginationPartakerDiv::-webkit-scrollbar{
-    -webkit-appearance: none;
-}
-
-.paginationPartakerDiv::-webkit-scrollbar:vertical{
-    width: 10px;
-}
-
-.paginationPartakerDiv::-webkit-scrollbar-button:increment, .paginationPartakerDiv::-webkit-scrollbar-button{
-    display: none;
-}
-
-.paginationPartakerDiv::-webkit-scrollbar:horizontal{
-    height: 10px;
-}
-
-.paginationPartakerDiv::-webkit-scrollbar-thumb{
-    background: #f1f1f1;
-    border-radius: 20px;
-    border: 2px solid #f1f1f1;
-}
-
-.paginationPartakerDiv::-webkit-scrollbar-track{
-    border-radius: 10px;
-}
-
-.paginationPartaker{
-    align-items: center;
-}
-
-.previousPartaker{
-    float: left;
-}
-
-.imagePartaker {
-    width:100px;
-    height:100px;
-    border-radius:90px;
-    background-color: white;
-}
-
-.imageP{
-    width: 100%;
-}
-
-.partaker{
-    margin-top: -8px;
-    font-size: 12px;
+.todayDate{
+    text-decoration: none;
+    border: 1px solid #ffffff;
+    box-shadow: none;
+    font-size: 14px;
     letter-spacing: 1px;
+    text-align: center;
     text-transform: uppercase;
     font-weight: 300;
     color: #333;
-    width:100%;
-    text-align: center;
-    margin-left: -15px;
+    padding: 10px;
+    outline: none;
 }
 
-.owner{
-    border-style: solid;
-    border-color: rgba(102, 187, 106, 0.53);
-}
-
-.icon{
-    width: 35px;
-    height: 20px;
-    padding-right: 5px;
-}
-
-.date{
-    width: 100%;
-    padding-top: 10px;
+.imageCol{
+    text-align: left;
 }
 
 .subtitle{
-    padding-top: 40px;
-    font-size: 24px;
+    padding-top: 60px;
+    font-size: 18px;
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -404,213 +88,87 @@ div.paginationPartakerDiv {
     width: 55%;
     color: #555;
 }
-
-.modal-body{
-    margin-bottom: -25px;
-}
-
-.editDiv{
-    padding-top: 5px;
-    padding-right: 10px;
-    padding-left: 10px;
-}
-
-.deleteDiv{
-    padding-top: 5px;
-}
-
-.more a{
-    position: relative;
-    margin-top: 20px;
-    font-size: 12px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    font-weight: 600;
-    text-decoration: none;
-    color: #66bb6a;
-    cursor:pointer;
-    vertical-align: center;
-}
-.more{
-    display:flex;
-    justify-content: center;
-    align-items: end;
-    padding-bottom: 20px;
-
-}
-
-.closeButton{
-    margin-top: -50px;
-}
-
-ul.pagination{
-    display: flex;
-    padding-left: 0;
-    list-style: none;
-    width: 100%;
-}
-
-ul.pagination li {
-    display: inline;
+.button
+{
+    padding: 10px;
     border: none;
-}
-
-ul.pagination li a {
-    padding: 8px 16px;
-    text-decoration: none;
-    transition: background-color .3s;
-    border: 1px solid #ffffff;
-    box-shadow: none;
-    font-size: 14px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    text-align: center;
-    font-weight: 300;
-    background: #f5f5f5;
-    color: #333;
     outline: none;
+    box-shadow: none;
+    max-width: 180px;
+    background: #66bb6a;
+    color: #fff;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    transition: 0.5s;
+    text-transform: uppercase;
+    margin-left: 35%;
 }
 
-ul.pagination li:first-child a
-{
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    cursor:pointer;
-
+.imageDiv{
+    position: relative;
+    display: inline-block;
+    text-align: center;
+    padding-top: 50px;
+    background: #fff;
 }
 
-ul.pagination li:last-child a
-{
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    cursor:pointer;
+.image {
+    width:346px;
+    height:346px;
+    border-radius:180px;
+    background-color: white;
+    box-shadow: 0 10px 50px rgba(0,0,0,0.5);
 }
-
-.previous{
-    float: left;
-}
-
-.next{
-    float: right;
-}
-
-@media (max-width: 349px) {
-
-    ul.paginationEvent li {
-        padding-bottom: 20px;
-    }
-    .previousEvent{
-        float: none;
-        margin-left: -40px;
-    }
-
-    .nextEvent{
-        float: none;
-    }
-
-    div.paginationPartakerDiv {
-        height: 145px;
-        border-left-style: none;
-    }
-
-    .editDiv{
-        padding-left: 15px;
-    }
-}
-/*XXL*/
-@media (min-width: 1400px) {
-    .card-text{
-        padding-right: 20px;
-    }
-    .searchDiv input {
-        width: 42%;
-    }
-    .searchDiv{
-        text-align: right;
-    }
-}
-
-/*XL*/
-@media (min-width: 1200px) and (max-width: 1400px) {
+@media (min-width: 768px){
     .title{
-        padding-top: 20px;
+        margin-top: 15%;
     }
-    .card-text{
-        text-align: center;
-        padding-left: 0px;
-    }
-    .searchDiv input {
-        width: 45%;
-    }
-    .searchDiv{
-        text-align: right;
+    .button{
+        margin-left: 40%;
     }
 }
 
-/*L*/
-@media (min-width: 993px) and (max-width: 1200px) {
-    .card-text{
-        padding-right: 30px;
+@media (max-width: 380px){
+    .image {
+        width:280px;
+        height:280px;
     }
-    .searchDiv input {
-        width: 55%;
+    .imageDiv{
+        margin-left: 5%;
     }
-    .searchDiv{
-        text-align: right;
+}
+@media (min-width: 400px) and (max-width: 768px){
+    .button{
+        margin-left: 40%;
+    }
+}
+@media (min-width: 340px) and (max-width: 400px){
+    .button{
+        margin-left: 37%;
+    }
+}
+@media (min-width: 768px) and (max-width: 1200px){
+    .calendarDiv{
+        margin-left: 1%;
     }
 }
 
-/*M*/
-@media (min-width: 768px) and (max-width: 992px) {
-    .title{
-        padding-top: 20px;
-    }
-    .card-text{
-        text-align: center;
-        padding-left: 0px;
-    }
-    .searchDiv input {
-        width: 70%;
-    }
-    .searchDiv{
-        text-align: center;
-    }
-
-}
-
-/*S*/
-@media (min-width: 576px) and (max-width: 768px) {
-    .card-text{
-        padding-right: 45px;
-    }
-    .searchDiv input {
-        width: 100%;
-    }
-    .searchDiv{
-        text-align: right;
-    }
-    .createDiv{
-        text-align: center!important;
+@media (min-width: 576px) and (max-width: 768px){
+    .calendarDiv{
+        margin-left: 8%;
     }
 }
 
-/*XS*/
-@media (max-width: 576px) {
-    .title{
-        padding-top: 20px;
+@media (min-width: 341px) and (max-width: 576px){
+    .calendarDiv{
+        margin-left: 12%;
     }
-    .card-text{
-        text-align: center;
-        padding-left: 0px;
-    }
-    .searchDiv input {
-        width: 80%;
-    }
-    .searchDiv{
-        text-align: right;
-    }
-    .createDiv{
-        padding-top: 10px;
-        text-align: center!important;
+}
+
+@media (max-width: 340px){
+    .calendarDiv{
+        margin-left: 15%;
     }
 }
